--- a/TRPO and PPO/PPO_multi_env.ipynb
+++ b/TRPO and PPO/PPO_multi_env.ipynb
@@ -732,8 +732,9 @@
         "    self.env=SubprocVecEnv([self.create_env(env_name,i) for i in range(self.no_of_env)])\n",
         "    self.opt=tf.keras.optimizers.Adam(0.0003)\n",
         "    self.steps_in_epi=512    ### Fixed number of steps in a episode\n",
-        "    self.epochs=5000         ### Number of epochs\n",
+        "    self.iterations=5000         ### Number of epochs\n",
         "    self.goal=200           ### max reward\n",
+        "    self.epochs=10\n",
         "\n",
         "  def create_env(self,env_id,rank,seed=101):\n",
         "    def get_env():         #### The seed lets generate same sequence, and starting state is same and\n",
@@ -933,7 +934,7 @@
         "    self.Actor=self.get_actor()\n",
         "    self.Critic=self.get_critic()\n",
         "\n",
-        "    for i in range(self.epochs):\n",
+        "    for i in range(self.iterations):\n",
         "\n",
         "      ### For each epoch\n",
         "      s,a,R,v,Nv,op,Nd=self.get_episodes()\n",
@@ -959,7 +960,7 @@
         "      adv= np.asarray(adv).astype(np.float32)\n",
         "      ### Normalizing the advantages\n",
         "\n",
-        "      dataset=tf.data.Dataset.from_tensor_slices((op,s,a,adv,r)).shuffle(total_no_of_samples).batch(batch_size,drop_remainder=True)         \n",
+        "      dataset=tf.data.Dataset.from_tensor_slices((op,s,a,adv,r)).shuffle(total_no_of_samples).repeat(self.epochs).batch(batch_size,drop_remainder=True)         \n",
         "      iterator=dataset.as_numpy_iterator()\n",
         "\n",
         "      no_of_batches=total_no_of_samples/batch_size\n",
