--- a/TRPO and PPO/PPO_single_env.ipynb
+++ b/TRPO and PPO/PPO_single_env.ipynb
@@ -42,6 +42,35 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "gsQ6e9Oi9zih"
+      },
+      "source": [
+        "### The pi_old is the poicy for the n-1 th iteration policy, when we calculate for n th iteration.\n",
+        "### The constraint is only applied for a particuar iteration for the batch updates."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x0XyXmAa_5Zt"
+      },
+      "source": [
+        "### PPO trains on the same set of collected samples, using different batches, for k epochs. So, it can \n",
+        "### train the models k*no of batches number of times.\n",
+        "\n",
+        "### The samples are updated only when, the agents move from one iteration to the other. old_policy for \n",
+        "### iteration i is the policy developed after all k*no of batches number of updates of the i-1 th iteration\n",
+        "### For the all the updates on the i th iteration the old policy remains constant. So the sample efficiency \n",
+        "### is said to be high compared to A2C which updates only once an iteration"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "CP9-ojhSLuOz"
       },
       "source": [
@@ -56,9 +85,10 @@
         "    self.Critic=None     ### Critic\n",
         "    self.opt=tf.keras.optimizers.Adam(0.0003)\n",
         "    self.steps_in_epi=512    ### Fixed number of steps in a episode\n",
-        "    self.epochs=5000         ### Number of epochs\n",
+        "    self.iterations=5000         ### Number of epochs\n",
         "    self.m=8                 ### Number of samples in a epoch.\n",
         "    self.target=500\n",
+        "    self.epochs=10\n",
         "  \n",
         "  def get_actor(self):\n",
         "\n",
@@ -256,7 +286,7 @@
         "    self.Actor=self.get_actor()\n",
         "    self.Critic=self.get_critic()\n",
         "\n",
-        "    for i in range(self.epochs):\n",
+        "    for i in range(self.iterations):\n",
         "      ### For each epoch\n",
         "      s,a,r,v,op = self.get_experience(self.m)\n",
         "      #### Obtaining values.\n",
@@ -266,7 +296,7 @@
         "      ### Normalizing the advantages\n",
         "      total_no_of_samples=len(s)\n",
         "\n",
-        "      dataset=tf.data.Dataset.from_tensor_slices((op,s,a,adv,r)).shuffle(total_no_of_samples).batch(batch_size,drop_remainder=True)         \n",
+        "      dataset=tf.data.Dataset.from_tensor_slices((op,s,a,adv,r)).shuffle(total_no_of_samples).repeat(self.epochs).batch(batch_size,drop_remainder=True)         \n",
         "      iterator=dataset.as_numpy_iterator()\n",
         "\n",
         "      no_of_batches=total_no_of_samples/batch_size\n",
