--- a/TRPO and PPO/PPO_single_env.ipynb
+++ b/TRPO and PPO/PPO_single_env.ipynb
@@ -25,7 +25,7 @@
         "import tensorflow as tf\n",
         "import tensorflow_probability as tfp"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -36,7 +36,7 @@
       "source": [
         "import gym"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
         "    self.steps_in_epi=512    ### Fixed number of steps in a episode\n",
         "    self.iterations=5000         ### Number of epochs\n",
         "    self.m=8                 ### Number of samples in a epoch.\n",
-        "    self.target=500\n",
+        "    self.target=1000\n",
         "    self.epochs=10\n",
         "  \n",
         "  def get_actor(self):\n",
@@ -125,48 +125,44 @@
         "    return model\n",
         "  \n",
         "  \n",
-        "  def action(self,s):\n",
-        "    \n",
-        "    s=s.reshape(1,-1)\n",
-        "    out=self.Actor(s)   \n",
-        "    action_prob=tfp.distributions.Categorical(probs=out)\n",
-        "    action= action_prob.sample()\n",
-        "    ### sampling an action from the obtained probability distributions for all the action\n",
-        "    return action.numpy()[0]  ### Action returned as 1D tensor-> converting to scalar\n",
+        "  def get_action(self,state):\n",
         "\n",
-        "  def prob(self,s,a):\n",
+        "    state=state.reshape(1,-1)\n",
+        "    acts=self.Actor(state)\n",
+        "    act_probs=tfp.distributions.Categorical(probs=acts)\n",
+        "    return act_probs.sample().numpy()[0]\n",
+        "  \n",
+        "  def get_value(self,state):\n",
+        "    state=state.reshape(1,-1)\n",
+        "    value=self.Critic(state).numpy()[0]\n",
+        "    return value\n",
         "\n",
-        "    out=self.Actor(s)\n",
-        "    ### again to be used in batch\n",
-        "    action_prob=tfp.distributions.Categorical(probs=out)\n",
-        "    ### takes in the states and the actions and returns the corresponding log probability \n",
-        "    ### of the occurence of the taken action a on the state s\n",
-        "    ### log(P[a|s : w]) is obtained.\n",
-        "    return action_prob.prob(a)\n",
+        "  def get_prob(self,state,action):\n",
+        "    acts=self.Actor(state)\n",
+        "    act_probs=tfp.distributions.Categorical(probs=acts)\n",
+        "    return act_probs.log_prob(action)\n",
         "\n",
-        "  def actor_loss(self,old_probs,S,A,Adv,epsilon=0.2):\n",
-        "    \n",
-        "    new_probs=self.prob(S,A) \n",
-        "    importance_ratio = tf.divide(new_probs,old_probs)\n",
-        "    surr_1=tf.multiply(importance_ratio,Adv)\n",
-        "    surr_2=tf.multiply(tf.clip_by_value(importance_ratio,1-epsilon,1+epsilon),Adv)\n",
-        "    L_clip=-1*tf.reduce_mean(tf.reduce_min([surr_1,surr_2],axis=0))\n",
-        "    \n",
-        "    return L_clip\n",
+        "  def actor_loss(self,S,A,Adv,log_old_probs,eps=0.2):\n",
+        "    log_new_probs=tf.reshape(self.get_prob(S,tf.reshape(A,(1,-1))[0]),shape=(-1,1))\n",
+        "    r=tf.math.exp(tf.math.subtract(log_new_probs,log_old_probs)) \n",
+        "    surr_1=tf.multiply(r,Adv)\n",
+        "    surr_2=tf.multiply(tf.clip_by_value(r,1-eps,1+eps),Adv)\n",
+        "    l_clip=-1*tf.reduce_mean(tf.reduce_min([surr_1,surr_2],axis=0))\n",
+        "    return l_clip\n",
         "\n",
         "  def critic_loss(self,S,ret):\n",
-        "    L_vf= 0.5*tf.reduce_mean(tf.math.squared_difference(ret,self.Critic(S)))\n",
-        "    return L_vf\n",
-        "  \n",
+        "    l_vf= 0.5*tf.reduce_mean(tf.math.squared_difference(ret,self.Critic(S)))\n",
+        "    return l_vf\n",
+        "    \n",
         "  def entropy(self,S):\n",
-        "    logits=self.Actor(S)\n",
-        "    dist=tfp.distributions.Categorical(logits=logits)\n",
-        "    L_S=tf.reduce_mean(dist.entropy())\n",
-        "    return L_S\n",
+        "      logits=self.Actor(S)\n",
+        "      dist=tfp.distributions.Categorical(logits=logits)\n",
+        "      L_S=tf.reduce_mean(dist.entropy())\n",
+        "      return L_S\n",
         "    ### Entropy induces exploration.\n",
         "  \n",
         "  def total_loss(self,old_probs,S,A,rets,Adv,c1=0.5,c2=0.001):\n",
-        "    act_loss=self.actor_loss(old_probs,S,A,Adv)\n",
+        "    act_loss=self.actor_loss(S,A,Adv,old_probs)\n",
         "    crit_loss=self.critic_loss(S,rets)\n",
         "    entropy_loss=self.entropy(S)\n",
         "\n",
@@ -181,53 +177,45 @@
         "    self.opt.apply_gradients(zip(grads,self.Actor.trainable_variables+self.Critic.trainable_variables))\n",
         "    #### Applying gradients.\n",
         "    return 0\n",
-        "  \n",
+        "    \n",
         "  def get_episodes(self):\n",
         "    ### To sample raw walks in the environment\n",
         "    states=[]\n",
         "    actions=[]\n",
         "    rewards=[]\n",
-        "    next_states=[]\n",
+        "    values=[]\n",
+        "    next_values=[]\n",
         "    not_done=[]\n",
+        "    old_probs=[]\n",
         "    \n",
         "\n",
         "    done=False\n",
         "    curr_state=self.env.reset()\n",
         "    for _ in range(self.steps_in_epi):\n",
         "      ### Recording fixed number of steps.\n",
-        "      action=self.action(curr_state)\n",
+        "      action=self.get_action(curr_state)\n",
         "      next_state,reward,done,_=self.env.step(action)\n",
+        "      value=self.get_value(curr_state)\n",
+        "      next_value=self.get_value(next_state)\n",
+        "      prob=self.get_prob(curr_state.reshape(1,-1),action)\n",
         "      ### Obtaining next step.\n",
         "\n",
         "      states.append(curr_state)\n",
-        "      actions.append(action)\n",
-        "      rewards.append(reward)\n",
-        "      next_states.append(next_state)\n",
-        "      not_done.append(not done)\n",
+        "      actions.append([action])\n",
+        "      rewards.append([reward])\n",
+        "      values.append(value)\n",
+        "      next_values.append(next_value)\n",
+        "      not_done.append([not done])\n",
+        "      old_probs.append(prob)\n",
         "      \n",
         "      ### logging the essential required values for loss estimation\n",
         "      if done:\n",
-        "        curr_state=env.reset()  ### If done, every value is reset.\n",
+        "        curr_state=self.env.reset()  ### If done, every value is reset.\n",
         "        done=False\n",
         "      else: \n",
         "        curr_state=next_state ### Updating.\n",
         "\n",
-        "    return states,actions,rewards,next_states,not_done  ### All logs returned\n",
-        "\n",
-        "  def get_value_funcs(self,states,next_states):\n",
-        "    \n",
-        "    #print(states)\n",
-        "    values=self.Critic.predict(np.array(states))    ### Recording the values for the states \n",
-        "    values= values.flatten()      ### Converting the 2D array to 1D array\n",
-        "    next_values=self.Critic.predict(np.array(next_states))   ### Recording the values for the next states\n",
-        "    next_values= next_values.flatten()      ### Converting the 2D array to 1D array\n",
-        "    return values,next_values\n",
-        "\n",
-        "  def get_old_probs(self,states,actions):\n",
-        "    \n",
-        "    probs=self.prob(np.array(states),np.array(actions)).numpy()\n",
-        "    probs=probs.flatten()\n",
-        "    return np.array(probs)\n",
+        "    return np.array(states),np.array(actions),np.array(rewards),np.array(values),np.array(next_values),np.array(not_done),np.array(old_probs)  ### All logs returned\n",
         "\n",
         "  def get_gae(self,next_values,values,rewards,not_dones,gamma=0.99,lam=0.95):\n",
         "    \n",
@@ -251,21 +239,18 @@
         "    old_probs=[]\n",
         "\n",
         "    for i in range(m):\n",
-        "      S,A,R,Ns,Nd=self.get_episodes()\n",
-        "      vals,next_vals=self.get_value_funcs(S,Ns)\n",
-        "      old_prob=self.get_old_probs(S,A)\n",
-        "      rets=self.get_gae(next_vals,vals,R,Nd)\n",
+        "      s,a,r,v,nv,nd,op=self.get_episodes()\n",
+        "      ret=self.get_gae(nv,v,r,nd)\n",
         "\n",
-        "      \n",
         "      ### For each episode in number of samples, collecting experience\n",
-        "      old_probs.extend(old_prob)\n",
-        "      states.extend(S)\n",
-        "      actions.extend(A)\n",
-        "      returns.extend(rets)\n",
-        "      values.extend(vals)\n",
+        "      old_probs.extend(op)\n",
+        "      states.extend(s)\n",
+        "      actions.extend(a)\n",
+        "      returns.extend(ret)\n",
+        "      values.extend(v)\n",
         "   \n",
         "    return np.array(states),np.array(actions),np.array(returns),np.array(values),np.array(old_probs)\n",
-        "  \n",
+        "\n",
         "  def test_play(self):\n",
         "    ### Testing results for current weights.\n",
         "    overall=0\n",
@@ -274,7 +259,7 @@
         "      total_reward=0\n",
         "      done=False\n",
         "      while not done:\n",
-        "        a=self.action(curr_state.reshape(1,-1))\n",
+        "        a=self.get_action(curr_state.reshape(1,-1))\n",
         "        next_state,reward,done,_=self.env.step(a)\n",
         "        total_reward+=reward\n",
         "        curr_state=next_state\n",
@@ -282,27 +267,20 @@
         "    return overall/5\n",
         "  \n",
         "  def train(self,batch_size=128):\n",
-        "    ### Training\n",
         "    self.Actor=self.get_actor()\n",
         "    self.Critic=self.get_critic()\n",
-        "\n",
         "    for i in range(self.iterations):\n",
-        "      ### For each epoch\n",
-        "      s,a,r,v,op = self.get_experience(self.m)\n",
-        "      #### Obtaining values.\n",
-        "      adv= r - v\n",
-        "      #### Calculating advantages\n",
-        "      adv = (adv - adv.mean())/adv.std()\n",
-        "      ### Normalizing the advantages\n",
+        "\n",
+        "      s,a,r,v,op=self.get_experience(self.m)\n",
+        "      r=r.astype('float32')\n",
+        "      adv=r-v\n",
+        "      adv=adv.astype('float32')\n",
+        "      adv=(adv-adv.mean())/(adv.std())\n",
         "      total_no_of_samples=len(s)\n",
         "\n",
         "      dataset=tf.data.Dataset.from_tensor_slices((op,s,a,adv,r)).shuffle(total_no_of_samples).repeat(self.epochs).batch(batch_size,drop_remainder=True)         \n",
-        "      iterator=dataset.as_numpy_iterator()\n",
         "\n",
-        "      no_of_batches=total_no_of_samples/batch_size\n",
-        "\n",
-        "      for _ in range(int(no_of_batches)):\n",
-        "        prob_sample,s_sample,a_sample,adv_sample,r_sample=iterator.next()\n",
+        "      for (prob_sample,s_sample,a_sample,adv_sample,r_sample) in dataset:\n",
         "        self.train_on_batch(prob_sample,s_sample,a_sample,adv_sample,r_sample)\n",
         "      \n",
         "    \n",
@@ -312,9 +290,10 @@
         "        if score==self.target:\n",
         "          break\n",
         "\n",
+        "\n",
         "  \n"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -324,9 +303,9 @@
       },
       "source": [
         "env=gym.make('CartPole-v0')\n",
-        "env._max_episode_steps=500"
+        "env._max_episode_steps=1000"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -337,31 +316,28 @@
       "source": [
         "agent=PPO_single_agent(env)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "IUoqKBXhO5Ro",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "IUoqKBXhO5Ro",
-        "outputId": "0d8976af-48f5-4492-8b94-32887ea85f96"
+        "outputId": "15f243b2-6f52-4978-9cdc-5342ded5fc10"
       },
       "source": [
         "agent.train()"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "On Iteration 0 scores: 29.6\n",
-            "On Iteration 10 scores: 192.2\n",
-            "On Iteration 20 scores: 326.6\n",
-            "On Iteration 30 scores: 379.4\n",
-            "On Iteration 40 scores: 472.4\n"
+            "On Iteration 0 scores: 58.2\n",
+            "On Iteration 10 scores: 1000.0\n"
           ],
           "name": "stdout"
         }
@@ -370,7 +346,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vOKIxdSQO9hq"
+        "id": "0GBhRur6VtRO"
       },
       "source": [
         ""
